# n-nacos

./: .gitignore  .rustfmt.toml  Cargo.toml  Makefile  README.md  env.ini  package.json
commons/monitor/: Cargo.toml
commons/monitor/src/: lib.rs  monitor.rs
commons/utils/: Cargo.toml
commons/utils/src/: lib.rs
commons/utils/src/file/: mod.rs
commons/utils/src/utils/: mod.rs
components/bean-assembly/: Cargo.toml  README.md
components/bean-assembly/src/: lib.rs
components/bean-assembly/src/component/: mod.rs
components/bean-assembly/src/inject/: mod.rs
components/bean-assembly/tests/: test.rs
components/bean-factory/: Cargo.toml  README.md
components/bean-factory/src/: lib.rs
components/bean-factory/src/actor/: mod.rs
components/bean-factory/src/bean/: mod.rs
components/bean-factory/src/core/: mod.rs
components/bean-factory/src/factory/: mod.rs
components/bean-factory/tests/: test.rs
src-tauri/: .env  Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json  main.json
src-tauri/resources/: n-nacos-tools
src-tauri/sql/: nacos.sql  server.sql
src-tauri/src/: error.rs  main.rs  prepare.rs
src-tauri/src/answer/: mod.rs
src-tauri/src/applications/: mod.rs
src-tauri/src/article/: mod.rs
src-tauri/src/database/: interface.rs  mod.rs
src-tauri/src/database/helper/: mod.rs
src-tauri/src/event/: mod.rs
src-tauri/src/exports/: answer.rs  applications.rs  article.rs  look.rs  mod.rs  monitor.rs  pipeline.rs  robot.rs  server.rs  settings.rs
src-tauri/src/helper/: index.rs  mod.rs
src-tauri/src/helper/git/: mod.rs  pull.rs
src-tauri/src/logger/: mod.rs  pipeline.rs  server.rs
src-tauri/src/look/: cache.rs  config.rs  mod.rs
src-tauri/src/look/home/: mod.rs
src-tauri/src/monitor/: mod.rs
src-tauri/src/robot/: mod.rs
src-tauri/src/server/: index.rs  mod.rs
src-tauri/src/server/monitor/: mod.rs
src-tauri/src/server/pipeline/: index.rs  mod.rs  props.rs
src-tauri/src/server/pipeline/languages/: mod.rs
src-tauri/src/server/pipeline/languages/h5/: mod.rs
src-tauri/src/server/pipeline/pool/: mod.rs
src-tauri/src/server/pipeline/runnable/: docker.rs  mod.rs  stage.rs  steps.rs
src-tauri/src/server/pipeline/tag/: mod.rs
src-tauri/src/setting/: mod.rs
src-tauri/src/system/: tray.rs
src-tauri/src/task/: mod.rs
src-tauri/src/utils/: cache.rs  file.rs  mod.rs
