# [package]
# name = "n-nacos"
# version = "0.1.0"
# edition = "2021"
# authors = ["poohlaha"]
# license = "MIT/Apache-2.0"
# description = "use Rust with Nacos Server"
# homepage = "https://github.com/poohlaha/n-nacos"
# repository = "https://github.com/poohlaha/n-nacos"
# readme = "README.md"
# keywords = ["nacos", "n-nacos"]

[workspace]
members = [
    "components/*",
    "commons/*",
    "packages/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace.dependencies]
colored = "2.0"
env_logger = "0.10"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
sysinfo = "0.29"
chrono = "0.4"
sled = "0.34"
rust-ini = "0.19"
actix-web = "4"
tonic = "0.10"
actix = "0.13"

[workspace.dependencies.uuid]
version = "1.4.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols
