[package]
name = "n-nacos"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tauri = { version = "2.0.0-rc", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2.0.0-rc"
tauri-plugin-dialog = "2.0.0-rc"
tauri-plugin-log = "2.0.0-rc"

async-trait = "0.1.81"
mysql = "25.0.1"
dotenvy = "0.15"
sqlx = { version = "0.8.0", features = ["mysql", "runtime-async-std", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
ssh2 = "0.9"
async-std = "1.12"
dirs = "5.0"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_debug"] }
thiserror = "1.0"
git2 = "0.18"
regex = "1.10"
fs_extra = "1.3"
rayon = "1.8"
crypto-hash = "0.3"
handlers = {git = "https://github.com/poohlaha/rust-tools", branch = "main", package = "handlers", version = "0.1.2"}
docker = {git = "https://github.com/poohlaha/rust-tools", branch = "main", package = "docker", version = "0.1.5"}
sftp = {git = "https://github.com/poohlaha/rust-tools", branch = "main", package = "sftp", version = "0.1.9"}
minimize = {git = "https://github.com/poohlaha/rust-tools", branch = "main", package = "minimize", version = "0.1.1"}
chrono = "0.4.35"
futures = "0.3.30"
# images-compressor = "1.0.3"

[dependencies.uuid]
version = "1.4.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]


# 启用 LTO
[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols

