[package]
name = "n-nacos"
version = "1.0.0"
description = "N Nacos"
authors = ["poohlaha"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tauri = { version = "2.5.1", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2.2.1"
tauri-plugin-dialog = "2.2.1"
tauri-plugin-log = "2.4.0"
tauri-plugin-autostart = "2.3.0"
tauri-plugin-single-instance = "2.2.4"
tauri-plugin-positioner = { version = "2.2.0",  features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-fs = "2"
tauri-plugin-upload = "2"
tauri-plugin-process = "2"
tauri-plugin-websocket = "2"
tauri-plugin-opener = "2"

objc = "0.2.7"
cocoa = "0.26"
opener = "0.7.2"
plist = "1.7.1"

async-trait = "0.1.81"
mysql = "25.0.1"
dotenvy = "0.15"
sqlx = { version = "0.8.0", features = ["mysql", "runtime-async-std", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
ssh2 = "0.9"
async-std = "1.12"
dirs = "5.0"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_debug"] }
thiserror = "1.0"
git2 = "0.18"
regex = "1.10"
fs_extra = "1.3"
rayon = "1.8"
crypto-hash = "0.3"
handlers = {git = "https://github.com/poohlaha/rust-tools", branch = "main", package = "handlers", version = "0.1.2"}
docker = {git = "https://github.com/poohlaha/rust-tools", branch = "main", package = "docker", version = "0.1.5"}
sftp = {git = "https://github.com/poohlaha/rust-tools", branch = "main", package = "sftp", version = "0.1.9"}
minimize = {git = "https://github.com/poohlaha/rust-tools", branch = "main", package = "minimize", version = "0.1.1"}
chrono = "0.4.35"
futures = "0.3.30"
indexmap = "2.3.0"
base64 = "0.21"
urlencoding = "2.1"
zip = "0.6"
flate2 = "1.0"
tar = "0.4"
unrar = "0.4"
xz2 = "0.1"
bzip2 = "0.4"
encoding_rs = "0.8"
sevenz-rust = "0.6.1"
mupdf = "0.4"
calamine = "0.23"
parking_lot="0.12.3"
infer = "0.19"
# images-compressor = "1.0.3"

[dependencies.uuid]
version = "1.4.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
incremental = true # 以较小的步骤编译二进制文件。

# 启用 LTO
[profile.release]
codegen-units = 1 # 允许 LLVM 执行更好的优化。
lto = true # 启用链接时优化。
opt-level = "s" # 优先考虑小的二进制文件大小。如果您更喜欢速度，请使用 `3`。
panic = "abort" # 通过禁用 panic 处理程序来提高性能。
strip = true # 确保移除调试符号。

