[package]
name = "bean-factory"
version = "0.1.0"
edition = "2021"
authors = ["poohlaha"]
license = "MIT/Apache-2.0"
description = "Bean Factory"
homepage = ""
repository = ""
readme = "README.md"
keywords = ["bean", "bean-factory"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
env_logger = "0.10"
log = "0.4"
colored = "2.0"
